Add components.json for Shadcn UI configuration, update package.json and package-lock.json with new dependencies including Radix UI and Lucide React, enhance global styles in globals.css, and create a Button component for UI.

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,3 +1,5 @@
+import { Button } from '@/components/ui/button'
+
 # Universitetsmuseet i Bergen 200 år
 
 ## Work
@@ -11,3 +13,20 @@ import Work from '@/components/work'
 Dette diplomet er datert 7. august 1348 og handler om et drap i Bergen samme vår. Sysselmann Ivar Andresson gir beskjed til kong Magnus VII Eriksson om at Arne Alfinnson drepte Einar Auga, og gir en detaljert beskrivelse av hendelsen.
 </Work>
 ```
+
+## Button
+
+```tsx
+import { Button } from '@/components/ui/button'
+
+<Button>Click me</Button>
+```
+
+Tilgjengelige varianter:
+
+<Button variant="default">Default</Button>
+<Button variant="destructive">Destructive</Button>
+<Button variant="outline">Outline</Button>
+<Button variant="secondary">Secondary</Button>
+<Button variant="ghost">Ghost</Button>
+<Button variant="link">Link</Button>
