--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,4 +1,5 @@
 import { Button } from '@/components/ui/button'
+import { Work } from '@/components/work'
 import {
   IconHome,
   IconUsers,
@@ -27,7 +28,7 @@ import {
 
 ## Work
 
-`<Work />` er en IIIF-viser som kan brukes til å vise digitale IIIF-manifester. Den er bygd med [Clover-IIIF](https://github.com/samvera-labs/clover-iiif). Siste versjon av Nextjs og React fungerer ikke med Clover-IIIF, så vi må vente på at dette blir fikset.
+`<Work />` er en IIIF-viser som kan brukes til å vise digitale IIIF-manifester. Den er bygd med [Clover-IIIF](https://github.com/samvera-labs/clover-iiif). Siste versjon av Nextjs og React fungerer ikke med Clover-IIIF, så vi må bruke v2.12.0.
 
 ```tsx
 import Work from '@/components/work'
@@ -36,6 +37,10 @@ import Work from '@/components/work'
 Dette diplomet er datert 7. august 1348 og handler om et drap i Bergen samme vår. Sysselmann Ivar Andresson gir beskjed til kong Magnus VII Eriksson om at Arne Alfinnson drepte Einar Auga, og gir en detaljert beskrivelse av hendelsen.
 </Work>
 ```
+
+<Work id="ubb-diplom-0034" marcus="https://marcus.uib.no/instance/charter/ubb-diplom-0034.html">
+Dette diplomet er datert 7. august 1348 og handler om et drap i Bergen samme vår. 
+</Work>
 
 ## UI komponenter
 
@@ -57,7 +62,7 @@ import { Button } from '@/components/ui/button'
   <Button variant="outline">Outline</Button>
   <Button variant="secondary">Secondary</Button>
   <Button variant="ghost">Ghost</Button>
-<Button variant="link">Link</Button>
+  <Button variant="link">Link</Button>
 </div>
 
 ### Tilgjengelige størrelser:
@@ -66,12 +71,12 @@ import { Button } from '@/components/ui/button'
   <Button size="sm">Small</Button>
   <Button size="default">Default</Button>
   <Button size="lg">Large</Button>
-<Button size="icon"><IconUsers /></Button>
+  <Button size="icon"><IconUsers /></Button>
 </div>
 
 ## Ikoner
 
-Vi bruker [Tabler Icons](https://tabler-icons.io/) for å bygge våre ikoner.
+Vi bruker [Tabler Icons](https://tabler-icons.io/) for ikoner.
 
 ```tsx
 import { IconUsers } from '@tabler/icons-react'
