--- a/content/index.mdx
+++ b/content/index.mdx
@@ -33,7 +33,7 @@ Velkommen til nettutstillingen for Universitetsmuseet i Bergen 200 år jubileum!
 Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
 
 <Button size="lg" className="my-4">
-  <a href="/dokumentasjon">
+  <a href="/documentation">
     Lær mer om hvordan du lager en nettutstilling
   </a>
 </Button>
@@ -41,12 +41,14 @@ Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av k
 ## Eksempel på digitalt objekt
 
 <Work manifest="ubb-diplom-0034">
-  <Work.Description>
-    Dette diplomet er datert 7. august 1348 og handler om et drap i Bergen samme vår. 
-    Sysselmann Ivar Andresson gir beskjed til kong Magnus VII Eriksson om at Arne Alfinnson 
-    drepte Einar Auga, og gir en detaljert beskrivelse av hendelsen.
-  </Work.Description>
-  <Work.Link href="https://marcus.uib.no/instance/charter/ubb-diplom-0034.html">
-    Se mer i Marcus
-  </Work.Link>
+  <Work.Content>
+    <Work.Description>
+      Dette diplomet er datert 7. august 1348 og handler om et drap i Bergen samme vår. 
+      Sysselmann Ivar Andresson gir beskjed til kong Magnus VII Eriksson om at Arne Alfinnson 
+      drepte Einar Auga, og gir en detaljert beskrivelse av hendelsen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/charter/ubb-diplom-0034.html">
+      Se mer i Marcus
+    </Work.Link>
+  </Work.Content>
 </Work>
