Refactor tema structure: replace _meta.ts with _meta.tsx for improved component integration, add new topics including 'Arkeologi', 'Bokstaver og tegn', 'Det store utland', 'Dyr', 'Glass', 'Helse', 'Hverdag', 'Kirkekunst', 'Stein', 'Tid og rom', 'Vann, vær og vind', and 'Vekster', and update navigation cards for better organization and clarity.

--- a/content/documentation/index.mdx
+++ b/content/documentation/index.mdx
@@ -9,7 +9,7 @@ import { Quote } from '@/components/quote'
 
 ## Work
 
-`<Work />` is an IIIF viewer that can be used to display digital IIIF manifests. It is built with [Clover-IIIF](https://github.com/samvera-labs/clover-iiif). The latest version of Nextjs and React do not work with Clover-IIIF, so we must use v2.12.0.
+`<Work />` is an IIIF viewer that can be used to display digital IIIF manifests. It is built with [Clover-IIIF](https://github.com/samvera-labs/clover-iiif).
 
 ### Basic usage
 
