--- a/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
+++ b/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
@@ -5,7 +5,7 @@ title: Christie og de «mærkelige Fiske»
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { IIIFManifest } from '@/components/ui/chc/iiif-manifest'
 
-<ContentGrid>
+<ContentGrid className="mt-10">
 
 # Christie og de «mærkelige Fiske»
 
@@ -15,6 +15,7 @@ Selv om Christie i et brev til maleren I.C. Dahl i september 1836 hevder at «je
 
 I 1840 skriver Christie et notat om en «mærkelig Fisk» som ble fanget ved Askøy 18. mars samme år, og som nå er «hensat i Spiritus» ved Bergens Museum. Christie identifiserer fisken som Uer eller Rødfisk (Sebastes norvegicus), men han tror at det kan være en avart eller en ny art Rødfisk. I en 16 sider lang tekst beskriver og dissekerer Christie den potensielt nye arten ned til dens minste bestanddeler, men først lot han den avtegnes, «i naturlig Størrelse, efter dens naturlige Farver». 
 
+## Christie og Uer
 Den vakre akvarellen av Christies Uer ble laget av en ukjent kunstner, og Christie har selv skrevet på opplysningene om hvor fisken ble fanget, og at det han kaller «Nova species» (ny art) er beskrevet av ham selv.  
 
 <div className="feature">
@@ -23,6 +24,7 @@ Den vakre akvarellen av Christies Uer ble laget av en ukjent kunstner, og Christ
 
 Ved Universitetsmuseet og Universitetsbiblioteket er det bevart store samlinger av både håndtegnede og trykte fiskeillustrasjoner, Disse samlingene inkluderer selvsagt et rikt utvalg med Uer, bl.a. en tegnet og malt av Carl Peter eller Thorolf Lehmann ca. 1842, også denne trolig laget etter oppdrag fra Christie. Uer finnes også i det upubliserte manuskriptet om Helgelands flora og fauna, beskrevet og tegnet av sognepresten i Hemnes i Nordland, Iver Anker Heltzen (1785-1842). 
 
+## Ascanius og Uer
 Den mest fargesterke Uer-varianten i samlingene ble laget av den norske naturforskeren  Peter Ascanius (1723-1803), publisert i fembindsverket Icones rerum naturalium (1767-1807). Ascanius var glad i sterke farger; de fleste fiskene er nemlig såpass glorete at de ikke er i nærheten av det Christie betegnet som «naturlige Farver». Plansjeverket til Ascanius ble da også heftig kritisert både i samtiden og senere, som en kun vakker og fantasifull «billedbok». Ascanius var en av de første som artsbestemte Ueren, i plansjeverkbindet fra 1772 navngir han den som Perca norvegicus. 
 
 <div className="feature">
@@ -31,6 +33,7 @@ Den mest fargesterke Uer-varianten i samlingene ble laget av den norske naturfor
 
 Blant de mange originaltegningene av fisk i Christies arkiv finnes det tegninger som er kopiert etter nettopp Ascanius og Heltzen. Tegningene deres ble altså brukt som forelegg for nye tegninger av innsamlede fisker ved Bergens Museum. Selv om disse nye tegningene og akvarellene er svært varierende i både vitenskapelig og kunstnerisk utførelse, er de viktige som dokumentasjon av museets tidlige fiskesamlinger. 
 
+## Hvalsalen
 Fascinasjonen for «mærkelige» fisk og ikke minst for det som skjuler seg i dyphavene, både uer og mer obskure arter, er høyst levende også i dag. I den ærverdige Hvalsalen på Naturhistorisk museum finnes det en monterutstilling om «Gåtefulle fisk», en tittel Christie hadde nikket gjenkjennende til og som synliggjør de lange linjene i forskningen ved museet. 
 
 </ContentGrid>
