Enhance content structure: add theme configurations for 'Om' and 'Kontakt' pages, update index.mdx to use div instead of span for title, and introduce new topics 'Bokflora', 'Knut Fægri', and 'Miranda Bødtker' with corresponding content files. Refactor existing files for improved layout and organization.

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,7 +1,4 @@
-import { Button } from '@/components/ui/button'
-import { Work } from '@/components/work'
 import { MainHero } from '@/components/main-hero'
-import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
 import { NavCards } from '@/components/nav-cards'
 import { Carousel } from '@/components/carousel'
 import data from './1825-1875.json'
@@ -10,7 +7,7 @@ import data from './1825-1875.json'
 
 <ContentGrid>
 
-<span className="text-2xl font-bold text-center">En digital jubileumsutstilling</span>
+<div className="text-2xl font-bold text-center">En digital jubileumsutstilling</div>
 
 Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
 
