--- a/content/kontakt.mdx
+++ b/content/kontakt.mdx
@@ -1,3 +1,11 @@
+---
+title: Kontakt
+---
+
+<ContentGrid>
+
 # Kontakt
 
 For spørsmål eller kommentarer, vennligst send oss et postkort.
+
+</ContentGrid>
