--- a/content/om.mdx
+++ b/content/om.mdx
@@ -2,6 +2,8 @@
 title: Om nettutstillingen
 ---
 
+<ContentGrid>
+
 # Om nettutstillingen
 
 Vi feirer Universitetet i Bergen 200 år i 2025!
@@ -17,4 +19,4 @@ Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere 
 ## Vår visjon
 
 Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-
+</ContentGrid>
