--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -21,8 +21,18 @@ import { Card, Cards } from '@/components/card'
   </HeroContent>
 </Hero>
 
-{/* <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
+I midten av august 1878 botaniserte museumsdirektør D.C. Danielssen ved Adventfjorden på Svalbard, som medlem av den norske Nordhavsekspedisjonen. En av plantene han plukket var en reinrose (Dryas octopetala L.), som han puttet inn i feltdagboken sin. Og der har den blitt liggende siden, i 147 år. Det er ikke uvanlig å finne planter, moser eller lav i feltbøker og floraer i samlingene våre, men akkurat denne  reinrosa er bemerkelsesverdig godt bevart. 
+
+Botanisk avdeling ved Bergens Museum ble etablert i 1886, med Jørgen Brunchorst som museets første botaniker, grunnlegger av Muséhagen, og senere direktør. Det er bevart samlinger etter flere av de markante botanikerne ved museet og UiB, den klart mest omfattende etter professor Knut Fægri – arkivmaterialet hans er skapt gjennom hele 75 år. 
+
+Reinrosa er selvsagt med i alle floraene bevart i samlingene våre, fra praktverket Flora Danica til illustrasjonsbindet av Norsk Flora fra 1979, der den ble tegnet av Miranda Bødtker – hennes enorme samling med originalillustrasjoner er bevart ved Universitetsmuseet. 
+
+Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter – inneholder hele 359 reinroser, 17 funnet på Svalbard. Danielssens reinroser fra Adventfjorden i 1878 er de eldste eksemplarene i herbariet, men en ble altså godt gjemt og bevart i Danielssens feltdagbok. 
+
+<Cards title="Historier om vekster">
+  <Card title="Miranda Bødtker" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/miranda-boedtker" />
+  <Card title="Knut Fægri" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/knut-faegri" />
+  <Card title="Bokflora" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/bokflora" />
+</Cards>
 
 </ContentGrid>
