Add new content files

--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -21,8 +21,18 @@ import { Card, Cards } from '@/components/card'
   </HeroContent>
 </Hero>
 
-{/* <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
+I november 1901 strandet en 4,5 meter lang Nordspisshval (Mesoplodon bidens) ved Rugsund i Nordfjord. Nordspisshvalen, som tilhører nebbhval- eller spisshvalfamilen, ble avlevert til Bergens Museum, der den ved ankomsten ble fotografert liggende på en vogn i en snødekt museumshage. Det fascinerende ved nettopp denne hvalen er at den er et godt eksempel på hvordan et vitenskapelig funn ble dokumentert i ulike formater, som vi gjenfinner i samlingene våre i dag – som fysiske objekter, som gipsmodell, i fotografi og tegninger, i en notatbok, og i en vitenskapelig artikkel. 
+
+Før museets konservator James Grieg startet arbeidet med undersøkelse og dissekering av Nordspisshvalen, ble det laget en gipsmodell i full størrelse. Museets faste illustratør, Henrich Bucher jr. laget flere tegninger av hvalen, og dokumenterte i samarbeid med Grieg hvalens organer og skjelettdeler i detaljerte tusjtegninger. Griegs nitide undersøkelse av hvalen ble publisert i en 40-siders artikkel i museets årbok i 1904, illustrert med Buchers tegninger. 
+
+Sammen med notater, tegninger og fotografier er det bevart biologiske prøver av hvalens pannefure. Skjelettet til Nordspisshvalen henger i taket i den ikoniske hvalsalen på Naturhistorisk museum, ikke så langt fra monteren der dens artsfrende, Gåsenebbhvalen -den berømte plasthvalen funnet på Sotra i 2017 – er utstilt. 
+
+<Cards title="Historier om dyr">
+  <Card title="Kvalsalen" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/kvalsalen" />
+  <Card title="Bucher og blåkvalen" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/bucher-og-blaakvalen" />
+  <Card title="James Grieg" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/james-grieg" />
+  <Card title="Kaffe og elskov i blåhvalens buk" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk" />
+  <Card title="Plastkvalen" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="" href="/tema/dyr/plastkvalen" />
+</Cards>
 
 </ContentGrid>
