--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Vann, vær og vind
+sidebarTitle: Vann, vær og vind
 description: Dette er en beskrivelse av temaet vann, vær og vind.
 ---
 
