Demonstration of asIndexPage creating link from sidebar dropdown level.

--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Dyr
-description: Dette er en beskrivelse av temaet dyr.
+description: Dette er en beskrivelse av temaet dyr
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
