Add new theme metadata for various topics and update existing configurations: include 'root_link' for navigation, set 'asIndexPage' for index pages, and disable breadcrumb in theme settings.

--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Bokstaver og tegn
 description: Dette er en beskrivelse av temaet bokstaver og tegn.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
