--- a/content/tema/det-store-utland/index.mdx
+++ b/content/tema/det-store-utland/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Det store utland
 description: Dette er en beskrivelse av temaet det store utland.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
