--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Fisk
 description: Dette er en beskrivelse av temaet fisk.
+asIndexPage: true
 ---
 
 import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
