--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Glass
 description: Dette er en beskrivelse av temaet glass.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
