--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Helse
 description: Dette er en beskrivelse av temaet helse.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
