--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hverdag
 description: Dette er en beskrivelse av temaet hverdag.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
