--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Kirkekunst
 description: Dette er en beskrivelse av temaet kirkekunst.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
