--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -2,6 +2,7 @@
 title: Vann, vær og vind
 sidebarTitle: Vann, vær og vind
 description: Dette er en beskrivelse av temaet vann, vær og vind.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
