--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Vekster
 description: Dette er en beskrivelse av temaet vekster.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
