--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Arkeologi
 description: Dette er en beskrivelse av temaet arkeologi.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
