--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Stein
 description: Dette er en beskrivelse av temaet stein.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
