--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Tid og rom
 description: Dette er en beskrivelse av temaet tid og rom.
+asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
