--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -37,6 +37,8 @@ import { Card, Cards } from '@/components/card'
   </Work.Content>
 </Work>
 
+Ipsum lorum.
+
 {/* <Cards title="Historier om fisk">
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 </Cards> */}
