La til fjern meg tekst, som du skal fjerne.

--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -31,4 +31,6 @@ Foruten en mengde publiserte gamle plansjeverk med trykte fiskeillustrasjoner, f
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 </Cards>
 
+Fjern meg
+
 </ContentGrid>
