--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -26,4 +26,6 @@ import { Card, Cards } from '@/components/card'
   <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
 </Cards> */}
 
+Fjern meg
+
 </ContentGrid>
