Add external exhibition link and card for Miranda Bødtker's watercolors: include new metadata entry and update index.mdx to display the card with relevant details.

--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -34,6 +34,7 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
   <Card title="Miranda Bødtker" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/miranda-boedtker" />
   <Card title="Knut Fægri" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/knut-faegri" />
   <Card title="Bokflora" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="/tema/vekster/bokflora" />
+  <Card title="Miranda Bødtkers akrareller" description="Les om jkdjfl på 2oo skjd flsdk" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Vekster" href="https://tohundrefortellinger.w.uib.no/2016/09/15/1999-miranda-bodtkers-akvareller/" />
 </Cards>
 
 </ContentGrid>
