Update UI components documentation: replace external image links with local image paths for improved accessibility and consistency.

--- a/content/documentation/ui-components.mdx
+++ b/content/documentation/ui-components.mdx
@@ -142,14 +142,16 @@ The third boxs shows you the actual content of the Base64 text, it is a JSON obj
 
 ### Basic usage
 
+Using an image from the `public/images` folder, but you can link to an image. But tell the developer as some changes needs to be done for it to show.
+
 <Tabs items={['Code', 'Example']}>
   <Tabs.Tab>
     ```tsx copy
-    <Figure image="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60225609000001.jpg" alt="" width={1000} height={1000} />
+    <Figure image="/images/arkeologi/B2978_Myklebustmannen.jpg" alt="Myklebustmannen" width={1000} height={1000} />
     ```
   </Tabs.Tab>
   <Tabs.Tab>
-    <Figure image="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60225609000001.jpg" alt="" width={1000} height={1000} />
+    <Figure image="/images/arkeologi/B2978_Myklebustmannen.jpg" alt="Myklebustmannen" width={1000} height={1000} />
   </Tabs.Tab>
 </Tabs>
 
